# portfolio-site

./: Cargo.toml  README.md  data.config.toml  index.html  package-lock.json  tailwind.config.js
.config/: language_tool.config.toml
.github/workflows/: gh-pages-deploy.yml
src/: lib.rs  main.rs
src/components/: about_modal.rs  avatar.rs  blog_card.rs  blog_highlight.rs  button.rs  container.rs  error404.rs  footer.rs  header.rs  hero_language_tool.rs  hero_section.rs  mod.rs  navigation.rs  project_card.rs  project_highlight.rs  social_media.rs  theme_controller.rs  title.rs
src/components/button/: button.rs  language_button.rs  mod.rs
src/components/portfolio/: education.rs  mod.rs
src/config/: language_tool_config.rs
src/configs/: language_tool_config.rs
src/data/: language_tool_data.rs  mod.rs
src/fetch_data/: github_repo_project.rs  mod.rs
src/myconfig/: mod.rs
src/pages/: about_page.rs  blog_page.rs  contact_page.rs  error404_page.rs  home_page.rs  mod.rs  project_page.rs
style/: output.css
