[package]
name = "portfolio-site"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.14", features = ["tracing", "csr"] }
leptos_meta = "0.6.14"
leptos_router = { version = "0.6.14", features = ["csr"] }


[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "portfolio-site"  # Note this value here!!
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# Activates the tailwind build
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/output.css"
